--- a/app/views/signIn.xml
+++ b/app/views/signIn.xml
@@ -1,12 +1,13 @@
 <Alloy>
 	<Window class="container">
-		<View class="formView">
+		<ScrollView class="formView">
+			<ImageView class="splashLogo"/>
 			<TextField id="usernameTextField" class="usernameTextField" />
 			<TextField id="passwordTextField" class="passwordTextField" />			
 			<View width="70%" height="Titanium.UI.SIZE">
 				<Switch id="rememberMeButton" class="rememberMeButton" />
 				<Button class="loginButton" onClick="onClickLogin"></Button>
 			</View>
-		</View>
+		</ScrollView>
 	</Window>	
 </Alloy>
